--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -8,14 +8,22 @@
 </head>
 <body>
     <h1>Things I need to do:</h1> 
-        <table>
-            {% for item in items %}
-                <tr>
+    <table>
+        {% for item in items %}
+            <tr>
+                {% if item.done %}
+                    <td><strike>{{ item.name }}</strike></td>
+                {% else %}
                     <td>{{ item.name }}</td>
-                    <td>{{ item.done }}</td>
-                </tr>
-            {% endfor %}
-        </table>
+                {% endif %}
+            </tr>
+            {% empty %}
+            <tr><td>You have nothing to do</td></tr>
+        {% endfor %}
+    </table>
+    <a href = "/add">Add an Item</a>
+
+
     
      
     
