--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -17,6 +17,18 @@
                     <td>{{ item.name }}</td>
                 {% endif %}
                 <td>
+                    <a href="/delete/{{ item.id }}">
+                        Delete
+                    </a>
+                </td>
+
+                <td>
+                    <a href="/toggle/{{ item.id }}">
+                        Toggle
+                    </a>
+                </td>
+
+                <td>
                     <a href="/edit/{{ item.id }}">
                         Edit
                     </a>
